[package]
name = "ark-ff"
description = "A library for finite fields"
keywords = ["cryptography", "finite-fields"]
documentation = "https://docs.rs/ark-ff/"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
metadata.docs.rs.workspace = true
metadata.release.workspace = true

[dependencies]
ark-ff-asm.workspace = true
ark-ff-macros.workspace = true
ark-std.workspace = true
ark-serialize.workspace = true
arrayvec.workspace = true
educe.workspace = true
num-traits.workspace = true
rayon = { workspace = true, optional = true }
zeroize = { workspace = true }
num-bigint.workspace = true
digest = { workspace = true, features = ["alloc"] }
itertools.workspace = true

[dev-dependencies]
ark-test-curves = { workspace = true, features = [
    "bls12_381_curve",
    "mnt6_753",
    "secp256k1",
] }
ark-algebra-test-templates = { path = "../test-templates" }
p3_field = { git = "https://github.com/succinctlabs/Plonky3", package = "p3-field" }
p3_goldilocks = { git = "https://github.com/succinctlabs/Plonky3", package = "p3-goldilocks" }
blake2.workspace = true
sha3.workspace = true
sha2.workspace = true
libtest-mimic.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true
hex.workspace = true
criterion.workspace = true

[[example]]
name = "fpconfig"
path = "../examples/fpconfig.rs"

[[example]]
name = "smallfp_tests"
path = "../examples/smallfp_tests.rs"

[[bench]]
name = "cast_bench"
harness = false

[[bench]]
name = "field_comparison"
harness = false

[features]
default = []
std = ["ark-std/std", "ark-serialize/std", "itertools/use_std"]
parallel = ["std", "rayon", "ark-std/parallel", "ark-serialize/parallel"]
asm = []
