[package]
name = "ark-mnt-298"
version = "0.1.0"
authors = [
    "Sean Bowe",
    "Alessandro Chiesa",
    "Matthew Green",
    "Ian Miers",
    "Pratyush Mishra",
    "Howard Wu",
    "arkworks contributors"
]
description = "The MNT-298 cycle of pairing-friendly elliptic curves (and related curves)"
homepage = "https://arworks.rs"
repository = "https://github.com/arkworks/algebra"
documentation = "https://docs.rs/ark-mnt-298/"
keywords = ["cryptography", "finite fields" ]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
ark-ff = { path = "../ff", default-features = false }
ark-ec = { path = "../ec", default-features = false }
ark-std = { git = "https://github.com/arkworks-rs/utils", default-features = false }

[dev-dependencies]
ark-serialize = { path = "../serialize", default-features = false }
ark-algebra-tests = { path = "../algebra-tests", default-features = false }
rand = { version = "0.7", default-features = false }
rand_xorshift = "0.2"

[features]
default = [ "std", "mnt4_298", "mnt6_298" ]
std = [ "ark-std/std", "ark-ff/std", "ark-ec/std" ]

mnt4_298 = [ "mnt4_298_fr", "mnt4_298_fq" ]
mnt4_298_fr = []
mnt4_298_fq = []

ed_on_mnt4_298 = [ "mnt4_298_fr" ]
mnt6_298 = [ "mnt4_298_fr", "mnt4_298_fq" ]