[package]
name = "ark-poly-benches"
version = "0.1.0"
authors = [ "arkworks contributors" ]
description = "A library for benchmarking finite-field FFTs"
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"
publish = false

[dependencies]
ark-ff = { path = "../ff" }
ark-poly = { path = "../poly" }
ark-std = {  git = "https://github.com/arkworks-rs/utils", default-features = false }
ark-test-curves = { path = "../test-curves", default-features = false, features = [ "bls12_381_scalar_field", "mnt4_753_curve" ] }
criterion = "0.3.1"
rand = "0.7"
rayon = { version = "1", optional = true }

[features]
default = []
parallel = ["ark-ff/parallel", "rayon", "ark-poly/parallel", "ark-std/parallel" ]

[[bench]]
name = "fft"
path = "benches/fft.rs"
harness = false

[[bench]]
name = "dense_uv_polynomial"
path = "benches/dense_uv_polynomial.rs"
harness = false

[[bench]]
name = "dense_multilinear"
path = "benches/dense_multilinear.rs"
harness = false

[[bench]]
name = "sparse_multilinear"
path = "benches/sparse_multilinear.rs"
harness = false

[lib]
bench = false
