[package]
name = "ark-poly-benches"
version = "0.3.0"
authors = [ "arkworks contributors" ]
description = "A library for benchmarking finite-field FFTs"
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"
publish = false
rust-version = "1.56"

[dependencies]
ark-ff = { version = "^0.3.0", path = "../ff" }
ark-poly = { version = "^0.3.0", path = "../poly" }
ark-std = { version = "^0.3.0", default-features = false }
ark-test-curves = { version = "^0.3.0", path = "../test-curves", default-features = false, features = [ "bls12_381_scalar_field", "mnt4_753_curve" ] }
criterion = "0.3.1"
rayon = { version = "1", optional = true }

[features]
default = []
parallel = ["ark-ff/parallel", "rayon", "ark-poly/parallel", "ark-std/parallel" ]

[[bench]]
name = "fft"
path = "benches/fft.rs"
harness = false

[[bench]]
name = "dense_uv_polynomial"
path = "benches/dense_uv_polynomial.rs"
harness = false

[[bench]]
name = "dense_multilinear"
path = "benches/dense_multilinear.rs"
harness = false

[[bench]]
name = "sparse_multilinear"
path = "benches/sparse_multilinear.rs"
harness = false

[lib]
bench = false
