[package]
name = "ark-poly"
description = "A library for efficient polynomial arithmetic via FFTs over finite fields"
documentation = "https://docs.rs/ark-poly/"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
metadata.docs.rs.workspace = true
metadata.release.workspace = true
keywords = ["cryptography", "finite-fields", "fft", "polynomials"]

[dependencies]
ark-ff.workspace = true
ark-serialize = { workspace = true, features = ["derive"] }
ark-std.workspace = true
rayon = { workspace = true, optional = true }
derivative = { workspace = true, features = [ "use_core" ] }
hashbrown.workspace = true

[dev-dependencies]
ark-test-curves = { path = "../test-curves", default-features = false, features = [ "bls12_381_curve", "bn384_small_two_adicity_curve", "mnt4_753_curve"] }
criterion = "0.5.1"


[features]
default = []
std = [ "ark-std/std", "ark-ff/std" ]
parallel = [ "std", "ark-ff/parallel", "rayon", "ark-std/parallel" ]


[[bench]]
name = "fft"
path = "benches/fft.rs"
harness = false

[[bench]]
name = "dense_uv_polynomial"
path = "benches/dense_uv_polynomial.rs"

[[bench]]
name = "dense_multilinear"
path = "benches/dense_multilinear.rs"
harness = false

[[bench]]
name = "sparse_multilinear"
path = "benches/sparse_multilinear.rs"
harness = false
