[package]
name = "ark-serialize-derive"
description = "A library for deriving serialization traits for the arkworks ecosystem"
documentation = "https://docs.rs/ark-serialize-derive/"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
metadata.docs.rs.workspace = true
metadata.release.workspace = true
keywords = ["cryptography", "finite-fields", "elliptic-curves", "serialization"]

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
syn.workspace = true
quote.workspace = true
