[package]
name = "ark-serialize"
description = "A library for serializing types in the arkworks ecosystem"
documentation = "https://docs.rs/ark-serialize/"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
metadata.docs.rs.workspace = true
metadata.release.workspace = true
keywords = ["cryptography", "serialization"]

[lints]
workspace = true

[dependencies]
ark-serialize-derive = { workspace = true, optional = true }
ark-std.workspace = true
digest.workspace = true
num-bigint.workspace = true
rayon = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde-encoded-bytes = { workspace = true, optional = true, features = ["base64"] }
serde_with = { workspace = true, optional = true, default-features = false }

[dev-dependencies]
sha2.workspace = true
sha3.workspace = true
blake2.workspace = true
serde_json.workspace = true
ark-test-curves = { workspace = true, default-features = false, features = [
    "bls12_381_curve",
] }


[features]
default = []
parallel = ["rayon"]
std = ["ark-std/std", "serde_with?/std"]
derive = ["ark-serialize-derive"]
serde = ["dep:serde", "dep:serde-encoded-bytes", "dep:serde_with"]
serde_with = ["serde", "dep:serde_with"]