[package]
name = "ark-test-curves"
version = "0.3.0"
authors = [ "arkworks contributors" ]
description = "A library for testing ark-ec & ark-poly"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/algebra"
documentation = "https://docs.rs/ark-test-curves/"
keywords = ["cryptography", "serialization" ]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.56"

[dependencies]
ark-std.workspace = true
ark-ff.workspace = true
ark-ec.workspace = true

[dev-dependencies]
ark-serialize.workspace = true
ark-algebra-test-templates.workspace = true
ark-algebra-bench-templates.workspace = true

[features]
default = []

asm = [ "ark-ff/asm" ]

parallel = [ "ark-ff/parallel", "ark-ec/parallel", "ark-std/parallel" ]

bls12_381_scalar_field = []
bls12_381_curve = [ "bls12_381_scalar_field" ]
ed_on_bls12_381 = [ "bls12_381_scalar_field" ]

mnt4_753_scalar_field = []
mnt4_753_base_field = []
mnt4_753_curve = [ "mnt4_753_scalar_field", "mnt4_753_base_field" ]

mnt6_753 = [ "mnt4_753_scalar_field", "mnt4_753_base_field" ]

bn384_small_two_adicity_scalar_field = []
bn384_small_two_adicity_base_field = []
bn384_small_two_adicity_curve = [ "bn384_small_two_adicity_scalar_field", "bn384_small_two_adicity_base_field" ]

secp256k1 = []

[[bench]]
name = "bls12_381"
path = "benches/bls12_381.rs"
harness = false

[[bench]]
name = "ed_on_bls12_381"
path = "benches/ed_on_bls12_381.rs"
harness = false

[[bench]]
name = "bn384_small_two_adicity"
path = "benches/bn384_small_two_adicity.rs"
harness = false

[[bench]]
name = "mnt4_753"
path = "benches/mnt4_753.rs"
harness = false

[[bench]]
name = "mnt6_753"
path = "benches/mnt6_753.rs"
harness = false
