[package]
name = "ark-algebra-test-templates"
version = "0.4.0"
authors = [ "arkworks contributors" ]
description = "A library for tests for finite fields, elliptic curves, and pairings"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/algebra"
documentation = "https://docs.rs/ark-curve-tests/"
keywords = ["cryptography", "finite-fields", "elliptic-curves" ]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.63"

[dependencies]
ark-std = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", path = "../serialize", default-features = false }
ark-ff = { version = "0.4.0", path = "../ff", default-features = false }
ark-ec = { version = "0.4.0", path = "../ec", default-features = false }
num-bigint = { version = "0.4", default-features = false }
num-integer = { version = "0.1", default-features = false }
num-traits = { version = "0.2", default-features = false }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
hex = "0.4"
sha2 = { version = "0.10", default-features = false }

[features]
default = []
std = [ "ark-std/std", "ark-ff/std", "ark-serialize/std", "ark-ec/std" ]
