[package]
name = "ark-algebra-test-templates"
description = "A library for tests for finite fields, elliptic curves, and pairings"
keywords = ["cryptography", "finite-fields", "elliptic-curves" ]
documentation = "https://docs.rs/ark-algebra-test-templates/"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
metadata.docs.rs.workspace = true
metadata.release.workspace = true

[dependencies]
ark-std.workspace = true
ark-serialize.workspace = true
ark-ff.workspace = true
ark-ec.workspace = true
num-bigint.workspace = true
num-integer.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true
hex.workspace = true
sha2.workspace = true

[features]
default = []
std = [ "ark-std/std", "ark-ff/std", "ark-serialize/std", "ark-ec/std" ]
