[package]
name = "ark-babyjubjub"
version.workspace = true
authors.workspace = true
description = "The Baby Jubjub Twisted Edwards curve"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/ark-babyjubjub/"
keywords.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-std = { workspace = true }
ark-r1cs-std = { workspace = true, optional = true }
ark-bn254 = { workspace = true, features = [ "scalar_field" ] }

[dev-dependencies]
ark-relations = { workspace = true }
ark-serialize = { workspace = true }
ark-algebra-test-templates = { workspace = true }
ark-curve-constraint-tests = { path = "../curve-constraint-tests" }

[features]
default = []
std = [ "ark-std/std", "ark-ff/std", "ark-ec/std", "ark-bn254/std" ]
r1cs = ["ark-r1cs-std"]
