[package]
name = "ark-bls12-377"
description = "The BLS12-377 pairing-friendly elliptic curve"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
metadata.docs.rs.workspace = true
metadata.release.workspace = true
documentation = "https://docs.rs/ark-bls12-377/"
keywords = ["cryptography", "finite-fields", "elliptic-curves" ]

[dependencies]
ark-ff.workspace = true
ark-ec.workspace = true
ark-r1cs-std.workspace = true
ark-std.workspace = true

[dev-dependencies]
ark-relations.workspace = true
ark-serialize.workspace = true
ark-algebra-test-templates.workspace = true
ark-algebra-bench-templates.workspace = true
ark-curve-constraint-tests = { path = "../curve-constraint-tests", default-features = false }
sha2.workspace = true

[features]
default = [ "curve" ]
std = [ "ark-std/std", "ark-ff/std", "ark-ec/std" ]

curve = [ "scalar_field", "base_field" ]
scalar_field = []
base_field = []
r1cs = [ "base_field", "ark-r1cs-std" ]

[[bench]]
name = "bls12_377"
path = "benches/bls12_377.rs"
harness = false
