[package]
name = "ark-bls12-381"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
metadata.docs.rs.workspace = true
metadata.release.workspace = true
description = "The BLS12-381 pairing-friendly elliptic curve"
documentation = "https://docs.rs/ark-bls12-381/"
keywords = ["cryptography", "finite-fields", "elliptic-curves" ]

[dependencies]
ark-ff.workspace = true
ark-ec.workspace = true
ark-std.workspace = true
ark-serialize.workspace = true

[dev-dependencies]
ark-algebra-test-templates.workspace = true
ark-algebra-bench-templates.workspace = true
hex.workspace = true

[features]
default = [ "curve" ]
std = [ "ark-std/std", "ark-ff/std", "ark-ec/std" ]

curve = [ "scalar_field" ]
scalar_field = []

[[bench]]
name = "bls12_381"
path = "benches/bls12_381.rs"
harness = false
