[package]
name = "ark-bw6-767"
version.workspace = true
authors.workspace = true
description = "The BW6-767 pairing-friendly elliptic curve"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/ark-bw6-767/"
keywords.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
ark-ff = { version= "0.4.0", default-features = false }
ark-ec = { version= "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
ark-bls12-381 = { version = "0.4.0", path = "../bls12_381", default-features = false, features = [ "curve" ] }

[dev-dependencies]
ark-serialize = { version = "0.4.0", default-features = false }
ark-algebra-test-templates = { version = "0.4.0", default-features = false }
ark-algebra-bench-templates = { version = "0.4.0", default-features = false }

[features]
default = []
std = [ "ark-std/std", "ark-ff/std", "ark-ec/std", "ark-bls12-381/std" ]

[[bench]]
name = "bw6_767"
path = "benches/bw6_767.rs"
harness = false
